@startuml
hide circle
hide empty methods
hide empty attributes

'Services
class MeetService #powderblue
class FriendService #powderblue
class MessengerService #powderblue
class LDService #powderblue

'Entities
class Friendship #greenyellow
class MeetExternalLinks #greenyellow
class ChatMailbox #greenyellow
class ChatMessage #greenyellow
class Meet #greenyellow
class MeetStar #greenyellow

'Associations

MeetService -- MeetExternalLinks
MeetService -- Meet
MeetService -- MeetStar

FriendService -- Friendship

MessengerService -- ChatMailbox
MessengerService -- ChatMessage

MeetExternalLinks -- LDService
Meet              -- LDService
ChatMailbox       -- LDService
ChatMessage       -- LDService

@enduml
